--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/ryan1002/Gulp-setup#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0",
     "image-min": "^0.3.2"
   }
 }
