sourcemaps installed and working alongside autoprefixer

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.1.0",
     "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.4",
     "image-min": "^0.3.2"
   }
 }
