added gulp minify it works produces the file in the dist folder and minifies the js file

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-autoprefixer": "^4.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.4",
+    "gulp-uglify": "^3.0.0",
     "image-min": "^0.3.2"
   }
 }
